--- a/daniel-dietrich-resume.tex
+++ b/daniel-dietrich-resume.tex
@@ -454,7 +454,7 @@ He collaborates with developers around the world on the GitHub platform and is s
 TypeScript &
 \icon{Star}{12}{msyellow}\icon{Star}{12}{msyellow}\icon{Star}{12}{msyellow}\icon{Star}{12}{msyellow}\icon{Star}{12}{msyellow} \\[2pt]
 
-\icontext{JavaScript}{12}{React}{white} &
+JavaScript &
 \icon{Star}{12}{msyellow}\icon{Star}{12}{msyellow}\icon{Star}{12}{msyellow}\icon{Star}{12}{msyellow}\icon{Star}{12}{msyellow} \\[2pt]
 
 Java &
