--- a/daniel-dietrich-resume.tex
+++ b/daniel-dietrich-resume.tex
@@ -329,7 +329,7 @@
 		\transparent{1}
 		\begin{center}
 		\larrow{softcol}\textcolor{white}{
-		  Passionate API designer and enthusiast about clean and robust code. Intrinsically motivated team player with a creative vein and a fondness for web design.
+		  Passionate API designer and enthusiastic about clean and robust code. Intrinsically motivated team player with a creative vein and a fondness for web design.
 		}
 		\end{center}
 	}
